# turnip-calc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
ffi/: Cargo.toml
ffi/com/cjriches/turnipcalc/: TurnipCalc.java
ffi/src/: java_bindings.rs  lib.rs
lib/: Cargo.toml
lib/src/: tests.rs
lib/src/node/: factory.rs
lib/src/snapshots/: turnip_calc_lib__tests__decreasing_partial.snap  turnip_calc_lib__tests__large_spike_partial.snap  turnip_calc_lib__tests__random_partial.snap
src/: lib.rs  main.rs  node.rs  pattern.rs
src/node/: factory.rs
src/snapshots/: turnip_calc__tests__missing_prices.snap  turnip_calc__tests__small_spike_partial.snap
