[package]
name = "turnip-calc-lib"
authors = ["Chris Riches"]
version = "1.1.0"
description = "Turnip Pattern Calculator Library for Animal Crossing: New Leaf and New Horizons."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
insta = "1.9.0"
